Add video and screenshot support to Game model and importers
Introduces 'video_id' and 'screenshots' fields to the Game model with a migration. Updates the IGDB import management commands to fetch and store video IDs and up to three screenshots per game. Adds token caching for Twitch/IGDB API authentication and improves .gitignore to exclude the token file.

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ logs/
 .env
 .env.*
 
-#Fichiers d'états pour les commandes custom
+# Fichiers d'états pour les commandes custom
 *.state
+
+# Token Twitch IGDB
+twitch_token.json
