--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ charset-normalizer==3.4.4
 click==8.3.1
 cookiecutter==2.6.0
 Django==5.2.8
+django-jazzmin==3.0.1
 django-tailwind==4.4.1
 fake-useragent==2.2.0
 frozenlist==1.8.0
